# rust-dev-client

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  cspell.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/platform-deps/: action.yml
.github/workflows/: ci.yml
src/: app.rs  connect.rs  connection_window.rs  data_track.rs  launcher.rs  lib.rs  logo_track.rs  main.rs  rpc_ui.rs  service.rs  utils.rs  video_grid.rs  video_renderer.rs
src/connection/: context.rs  data_track.rs  menu_bar.rs  mod.rs  participants.rs  right_panel.rs  sidebar.rs  video_grid_view.rs  window.rs
src/connection/rpc/: handler_card.rs  mod.rs  send_form.rs
src/media/: logo_track.rs  mic_track.rs  mod.rs  video_renderer.rs
src/room/: context.rs  data_streams.rs  menu_bar.rs  mod.rs  participants.rs  right_panel.rs  sidebar.rs  status_bar.rs  track_grid_view.rs  video_grid_view.rs  window.rs
src/room/rpc/: handler_card.rs  mod.rs  send_form.rs
src/style/: colors.rs  mod.rs
src/ui/: data_chart.rs  labeled_field.rs  mod.rs  placeholder_tile.rs  prominent_button.rs  status_badge.rs  track_grid.rs  video_tile.rs
