[package]
name = "rust-dev-client"
description = "LiveKit Developer Client"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["default_fonts", "wgpu", "persistence"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
env_logger = "0.11"
futures = "0.3"
image = "0.25"
log = "0.4"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "parking_lot"] }
wgpu = "29.0"
winit = { version = "0.30.12", features = [ "android-native-activity" ] }
livekit = { version = "0.7.45", features = ["rustls-tls-native-roots"] }

# For local development, use a path override to the rust-sdks repo:
# livekit = { path = "../rust-sdks", features = ["rustls-tls-native-roots"] }

[package.metadata.bundle]
name = "LiveKit Client"
identifier = "io.livekit.rust-dev-client"
resources = ["src/moving-logo.png"]
copyright = "2026 LiveKit, Inc."
category = "public.app-category.developer-tools"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"