[package]
name = "rust-dev-client"
description = "LiveKit Developer Client"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.3", features = ["default_fonts", "wgpu"] }
egui = "0.34.3"
egui-wgpu = "0.34.3"
env_logger = "0.11"
futures = "0.3"
image = "0.25"
log = "0.4"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
tokio = { version = "1", features = ["full", "parking_lot"] }
# egui-wgpu 0.34 requires wgpu ^29.0.1; "29.0" resolves to a compatible 29.0.x.
wgpu = "29.0"
winit = { version = "0.30.12", features = [ "android-native-activity" ] }
livekit = { version = "0.7.49", features = ["rustls-tls-native-roots"] }
livekit-api = { version = "0.5.4", default-features = false, features = ["access-token"] }

# For local development, use a path override to the rust-sdks repo:
# livekit = { path = "../rust-sdks", features = ["rustls-tls-native-roots"] }

[package.metadata.bundle]
name = "LiveKit Client"
identifier = "io.livekit.rust-dev-client"
copyright = "2026 LiveKit, Inc."
category = "public.app-category.developer-tools"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"